--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>포트폴리오 사이트 실습</title>
+    <title>포트폴리오 사이트 실습예제</title>
 
     <!-- css -->
     <link rel="stylesheet" href="css/normalize.css" />
